[tool.poetry]
name = "echo"
version = "0.1.0"
description = ""
authors = ["Yaman Ahlawat <yaman@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
accelerate = "^0.25.0"
transformers = "^4.38.2"
datasets = "^2.18.0"
diffusers = "^0.25.0"
peft = "^0.7.1"
wandb = "^0.16.2"
pydantic = "^2.6.3"
loguru = "^0.7.2"
bitsandbytes = "^0.42.0"
pytorch-optimizer = "^2.12.0"
deepface = "^0.0.81"
torchvision = "^0.16.2"
omegaconf = "^2.3.0"
python-slugify = {extras = ["unidecode"], version = "^8.0.4"}


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^8.22.2"
ruff = "^0.1.12"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
